--- a/Dark.html
+++ b/Dark.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0037)file:///C:/Users/Hp/Desktop/dark.html -->
+<!-- saved -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title> Brief title.</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
